feat: function API like and comment of a postpost
